# hydro-eval

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
data/isimip3b/historical/: discharge_daily.csv
data/isimip3b/ssp245/: discharge_daily.csv
data/isimip3b/ssp585/: discharge_daily.csv
data/restore4life/historical/: discharge_daily.csv
data/restore4life/ssp245/: discharge_daily.csv
data/restore4life/ssp585/: discharge_daily.csv
src/hydro_eval/: __init__.py  cli.py
src/hydro_eval/config/: models.py
src/hydro_eval/core/: comparison.py  context.py  engine.py  exporter.py  hydrology.py  logging.py  plotting.py  stats.py  timewindow.py
src/hydro_eval/indicators/: A1_qmean.py  A2_fdc.py  A3_mts.py  B1_lfd.py  B2_ldry.py  B3_def.py  C1_hfd.py  C2_amax.py  D1_iafd.py  base.py  catalog.py  preview.py
src/hydro_eval/io/: discovery.py  loader.py  reader.py
